# meson-sqlite

./: .gitignore  README.md  meson.build  sqlite-test.cpp
